--- a/client-side/html/test.html
+++ b/client-side/html/test.html
@@ -27,7 +27,7 @@
 
                     <div id="contacts-search-add">
 
-                        <input class="search-input" type="text" placeholder="search" list="browsers" />
+                        <input class="search-input" type="text" placeholder="search" />
 
                         <!--<img class="contacts-search-icon" src="../img/search.png"/>-->
 
@@ -37,20 +37,23 @@
 
                     </div>
 
-                    <div id="search-result">
+                    <div id="search-results">
 
-                        <div id="search-list">
+                        <div>
+                            Searched results
+                        </div>
 
-                            <div class="search-list-row">
-                                Murlock
+                        <div class="list-row">
+
+                            <div class="contact-image"></div>
+
+                            <div class="contact-info">
+                                <div style="font-size:18px">Valdemarus</div>
+                                <div style="font-size:14px">Simple moto</div>
                             </div>
 
-                            <div class="search-list-row">
-                                Stepanchuk
-                            </div>
-
-                            <div class="search-list-row">
-                                Fixel
+                            <div class="add-btn-wrapper">
+                                <button class="add-btn"></button>
                             </div>
 
                         </div>
@@ -58,6 +61,10 @@
                     </div>
 
                     <div id="contacts-list">
+
+                        <div>
+                            
+                        </div>
 
                         <div class="list-row">
 
@@ -70,9 +77,9 @@
 
                             <div class="contact-status"></div>
 
-                             <div class="remove-btn-wrapper">
-                                 <button class="remove-button"></button>
-                             </div>
+                            <div class="remove-btn-wrapper">
+                                <button class="remove-button"></button>
+                            </div>
 
                         </div>
 
