--- a/client-side/html/test.html
+++ b/client-side/html/test.html
@@ -27,7 +27,7 @@
 
                     <div id="contacts-search-add">
 
-                        <input class="search-input" type="text" placeholder="search / add" onkeydown="searchGlobalContacts()"/>
+                        <input id="srch-ipt" class="search-input" type="text" placeholder="search / add" oninput="searchGlobalContacts()"/>
 
                     </div>
 
