search function cont

--- a/client-side/html/test.html
+++ b/client-side/html/test.html
@@ -15,7 +15,7 @@
         <!--<script type="text/javascript" src="../overlay-scrollbar/js/jquery.overlayScrollbars.js"></script>-->
     </head>
 
-    <body >
+    <body onload="populateListWithTestData()">
 
         <div class="root">
 
@@ -33,7 +33,7 @@
 
                     <div id="search-results">
 
-                        <div class="search-results-caption">
+                        <div  class="search-results-caption">
                             Global searched results
                         </div>
 
@@ -56,7 +56,7 @@
 
                     <div id="contacts-list">
 
-                        <div class="search-results-caption">
+                        <div id="srch-my-list" class="search-results-caption">
                             In your list
                         </div>
 
