--- a/client-side/html/test.html
+++ b/client-side/html/test.html
@@ -15,7 +15,7 @@
         <!--<script type="text/javascript" src="../overlay-scrollbar/js/jquery.overlayScrollbars.js"></script>-->
     </head>
 
-    <body onload="populateListWithTestData()">
+    <body onload="populateContactListWithTestData()">
 
         <div class="root">
 
@@ -60,7 +60,7 @@
                             In your list
                         </div>
 
-                        <div class="list-row">
+                        <!--<div class="list-row" onclick="contactOnClick()">
 
                             <div class="contact-image"></div>
 
@@ -75,7 +75,7 @@
                                 <button class="remove-button"></button>
                             </div>
 
-                        </div>
+                        </div>-->
 
                     </div>
 
@@ -91,7 +91,7 @@
 
                     <div id="conversation-list">
 
-                        <div class="list-row">
+                        <div class="list-row" onclick="conversationOnClick()">
 
                             <div class="conversation-info">
                                 <div style="font-size:18px">Chat with Nicolo</div>
