--- a/client-side/html/test.html
+++ b/client-side/html/test.html
@@ -49,7 +49,7 @@
 
                     <div id="contacts-search-add">
 
-                        <input id="srch-ipt" class="search-input" type="text" placeholder="search / add" oninput="searchGlobalContacts()"/>
+                        <input id="srch-ipt" style="width: 100%" class="search-input" type="text" placeholder="search / add" oninput="searchGlobalContacts()"/>
 
                     </div>
 
@@ -82,7 +82,7 @@
                             In your list
                         </div>
 
-                        <!--<div class="list-row" onclick="contactOnClick()">
+                       <!-- <div class="list-row" onclick="contactOnClick()">
 
                             <div class="contact-image"></div>
 
@@ -107,12 +107,9 @@
 
                     <div id="conversation-search">
 
-                        <input class="search-input" type="text" placeholder="search" />
+                        <input class="search-input" style="width: calc(100% - 87px)" type="text" placeholder="search" />
 
-                        <div class="create-new-conversation-wrapper">
-                            <button class="create-new-conversation" onclick="createNewConversationOnClick()"></button>
-                        </div>
-
+                        <button class="create-new-conversation" onclick="createNewConversationOnClick()"></button>
 
                     </div>
 
@@ -120,7 +117,7 @@
 
                         <div class="list-row" onclick="conversationOnClick()">
 
-                            <div class="conversation-info">
+                            <div class="conversation-info" style="min-width: calc(100% - 46px)">
                                 <div>chat with Nicolo</div>
                             </div>
 
