--- a/client-side/html/test.html
+++ b/client-side/html/test.html
@@ -24,10 +24,26 @@
             <div id="contact-list-content">
 
                <div id="search-area">
-                   <input id="srch" class="search-input" type="text" placeholder="search / add" oninput="searchGlobalContacts()"/>
+                   <input id="srch" style="width: calc(100% - 54px)" class="search-input" type="text" placeholder="search / add" oninput="searchGlobalContacts()"/>
                </div>
 
                 <div id="contact-list-search">
+
+                    <div class="list-row">
+
+                    <div class="contact-image"></div>
+
+                    <div style="min-width: calc(100% - 100px)" class="contact-info">
+                        <div style="font-size:18px">Valdemarus</div>
+                    </div>
+
+                    <div class="check-box-wrapper">
+                        <button class="check-box-contact"></button>
+                    </div>
+
+                </div>
+
+
                 </div>
 
                 <div id="contact-list-list">
