--- a/client-side/html/test.html
+++ b/client-side/html/test.html
@@ -37,8 +37,9 @@
                         <div style="font-size:18px">Valdemarus</div>
                     </div>
 
-                    <div class="check-box-wrapper">
-                        <button class="check-box-contact"></button>
+
+                        <input   type="checkbox" />
+                        <div class="check-box-wrapper">
                     </div>
 
                 </div>
