continue of devel

--- a/client-side/html/test.html
+++ b/client-side/html/test.html
@@ -29,21 +29,29 @@
 
                 <div id="contact-list-search">
 
-                    <div class="list-row">
+                    <div class="list-row" >
 
-                    <div class="contact-image"></div>
+                        <div class="contact-image"></div>
 
-                    <div style="min-width: calc(100% - 100px)" class="contact-info">
-                        <div style="font-size:18px">Valdemarus</div>
+                        <label class="lbl-choose-contact"><span class="place_filler">Yamagati Gumi</span><input type="checkbox" class="checkbox-cont"/></label>
+
                     </div>
 
+                    <div class="list-row" >
 
-                        <input   type="checkbox" />
-                        <div class="check-box-wrapper">
+                        <div class="contact-image"></div>
+
+                        <label class="lbl-choose-contact"><span class="place_filler">Jhoni</span><input type="checkbox" class="checkbox-cont"/></label>
+
                     </div>
 
-                </div>
+                    <div class="list-row" >
 
+                        <div class="contact-image"></div>
+
+                        <label class="lbl-choose-contact"><span class="place_filler">Konstantine</span><input type="checkbox" class="checkbox-cont"/></label>
+
+                    </div>
 
                 </div>
 
@@ -130,9 +138,10 @@
 
                     </div>
 
+
                     <div id="conversation-list">
 
-                        <div class="list-row" onclick="conversationOnClick()">
+                        <div  class="list-row" onclick="conversationOnClick()">
 
                             <div class="conversation-info" style="min-width: calc(100% - 46px)">
                                 <div>chat with Nicolo</div>
