continue of devel

--- a/client-side/html/test.html
+++ b/client-side/html/test.html
@@ -33,7 +33,9 @@
 
                         <div class="contact-image"></div>
 
-                        <label class="lbl-choose-contact"><span class="place_filler">Yamagati Gumi</span><input type="checkbox" class="checkbox-cont"/></label>
+                        <input id="check_one" type="checkbox" class="checkbox-cont"/>
+                        <label for="check_one" class="lbl-choose-contact"><span class="place_filler">Yamagati Gumi</span></label>
+
 
                     </div>
 
@@ -41,7 +43,8 @@
 
                         <div class="contact-image"></div>
 
-                        <label class="lbl-choose-contact"><span class="place_filler">Jhoni</span><input type="checkbox" class="checkbox-cont"/></label>
+                        <input id="check_two" type="checkbox" class="checkbox-cont"/>
+                        <label for="check_two" class="lbl-choose-contact"><span class="place_filler">Jhoni</span></label>
 
                     </div>
 
@@ -49,7 +52,8 @@
 
                         <div class="contact-image"></div>
 
-                        <label class="lbl-choose-contact"><span class="place_filler">Konstantine</span><input type="checkbox" class="checkbox-cont"/></label>
+                        <input id="check_three" type="checkbox" class="checkbox-cont"/>
+                        <label for="check_three" class="lbl-choose-contact"><span class="place_filler">Konstantine</span></label>
 
                     </div>
 
