--- a/client-side/html/test.html
+++ b/client-side/html/test.html
@@ -36,7 +36,6 @@
                         <input id="check_one" type="checkbox" class="checkbox-cont"/>
                         <label for="check_one" class="lbl-choose-contact"><span class="place_filler">Yamagati Gumi</span></label>
 
-
                     </div>
 
                     <div class="list-row" >
@@ -52,15 +51,131 @@
 
                         <div class="contact-image"></div>
 
+                        <input id="check_1" type="checkbox" class="checkbox-cont"/>
+                        <label for="check_1" class="lbl-choose-contact"><span class="place_filler">Konstantine</span></label>
+
+                    </div>
+
+                    <div class="list-row" >
+
+                        <div class="contact-image"></div>
+
+                        <input id="check_2" type="checkbox" class="checkbox-cont"/>
+                        <label for="check_2" class="lbl-choose-contact"><span class="place_filler">Konstantine</span></label>
+
+                    </div>
+
+                    <div class="list-row" >
+
+                        <div class="contact-image"></div>
+
+                        <input id="check_3" type="checkbox" class="checkbox-cont"/>
+                        <label for="check_3" class="lbl-choose-contact"><span class="place_filler">Konstantine</span></label>
+
+                    </div>
+
+
+                    <div class="list-row" >
+
+                        <div class="contact-image"></div>
+
+                        <input id="check_4" type="checkbox" class="checkbox-cont"/>
+                        <label for="check_4" class="lbl-choose-contact"><span class="place_filler">Konstantine</span></label>
+
+                    </div>
+
+
+                    <div class="list-row" >
+
+                        <div class="contact-image"></div>
+
+                        <input id="check_5" type="checkbox" class="checkbox-cont"/>
+                        <label for="check_5" class="lbl-choose-contact"><span class="place_filler">Konstantine</span></label>
+
+                    </div>
+
+
+                    <div class="list-row" >
+
+                        <div class="contact-image"></div>
+
+                        <input id="check_6" type="checkbox" class="checkbox-cont"/>
+                        <label for="check_6" class="lbl-choose-contact"><span class="place_filler">Konstantine</span></label>
+
+                    </div>
+
+
+                    <div class="list-row" >
+
+                        <div class="contact-image"></div>
+
+                        <input id="check_7" type="checkbox" class="checkbox-cont"/>
+                        <label for="check_7" class="lbl-choose-contact"><span class="place_filler">Konstantine</span></label>
+
+                    </div>
+
+
+                    <div class="list-row" >
+
+                        <div class="contact-image"></div>
+
+                        <input id="check_8" type="checkbox" class="checkbox-cont"/>
+                        <label for="check_8" class="lbl-choose-contact"><span class="place_filler">Konstantine</span></label>
+
+                    </div>
+
+
+                    <div class="list-row" >
+
+                        <div class="contact-image"></div>
+
+                        <input id="check_9" type="checkbox" class="checkbox-cont"/>
+                        <label for="check_9" class="lbl-choose-contact"><span class="place_filler">Konstantine</span></label>
+
+                    </div>
+
+
+                    <div class="list-row" >
+
+                        <div class="contact-image"></div>
+
+                        <input id="check_11" type="checkbox" class="checkbox-cont"/>
+                        <label for="check_11" class="lbl-choose-contact"><span class="place_filler">Konstantine</span></label>
+
+                    </div>
+
+
+                    <div class="list-row" >
+
+                        <div class="contact-image"></div>
+
+                        <input id="check_12" type="checkbox" class="checkbox-cont"/>
+                        <label for="check_12" class="lbl-choose-contact"><span class="place_filler">Konstantine</span></label>
+
+                    </div>
+
+
+                    <div class="list-row" >
+
+                        <div class="contact-image"></div>
+
                         <input id="check_three" type="checkbox" class="checkbox-cont"/>
                         <label for="check_three" class="lbl-choose-contact"><span class="place_filler">Konstantine</span></label>
 
                     </div>
 
+
+
                 </div>
 
-                <div id="contact-list-list">
+                <div class="modal-wnd-btn">
+
+                    <button class="btn modal-btn-sending">cancel</button>
+
+                    <button class="btn modal-btn-sending">create</button>
+
                 </div>
+
 
             </div>
 
