continue of devel

--- a/client-side/html/test.html
+++ b/client-side/html/test.html
@@ -159,12 +159,11 @@
 
                 <div class="modal-wnd-btn">
 
-                    <button class="btn modal-btn-sending">cancel</button>
+                    <button class="btn modal-btn-sending" onclick="cancelNewConversation()">cancel</button>
 
                     <button class="btn modal-btn-sending">create</button>
 
                 </div>
-
 
             </div>
 
